# docassemble-VTFeeWaiverWithIncludeYMLFile

./: LICENSE  MANIFEST.in  pyproject.toml  setup.py
docassemble/VTFeeWaiverWithIncludeYMLFile/data/questions/: VT_fee_waiver.yml  VT_fee_waiver_to_include.yml
docassemble/VTFeeWaiverWithIncludeYMLFile/data/templates/: VT_fee_waiver_addendum.docx
